Fixed the same alignment issues for IE
Of course those changes did not reflect correctly in IE. So I added some extra code for IE and now everything is aligned on IE too

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -161,6 +161,11 @@
     position: relative;
     left: 1rem;
     max-width: 100%;
+    @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+      width: 38rem;
+    }
+
+
 }
 }
 
@@ -321,6 +326,9 @@ i {
 }
   @media only screen and (min-width: $break-xl) {
     left: 32px;
+    @media screen and (-ms-high-contrast: none) {
+      left: -15px;
+}
 }
 }
 
